--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66384,3 +66384,155 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   top: calc(50% - 50px);
   left: calc(50% - 50px);
 }
+
+._fimhxsp {
+  animation-duration: 600ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_14ic1xm !important;
+}
+
+@media (min-width: 744px) {
+  ._fimhxsp {
+    margin-bottom: 40px !important;
+  }
+}
+
+._1lpqz29 {
+    font-size: 16px !important;
+    line-height: 20px !important;
+    padding-top: 32px !important;
+    padding-bottom: 16px !important;
+    font-weight: 600 !important;
+    color: rgb(34, 34, 34) !important;
+}
+
+@media (min-width: 744px) {
+  ._1lpqz29 {
+    font-size: 18px !important;
+    line-height: 24px !important;
+  }
+}
+
+._gb49jh {
+  animation-duration: 600ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_14ic1xm !important;
+}
+
+.dir.uyl8mnh[class][class] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+._13xlah4 {
+  cursor: pointer !important;
+}
+
+._jro6t0 {
+  display: flex !important;
+}
+
+._7ytxmo {
+  margin-right: 16px !important;
+}
+
+._g4rlqtx {
+  cursor: pointer !important;
+  box-sizing: border-box !important;
+  height: 22px !important;
+  width: 22px !important;
+  margin: 0px !important;
+}
+
+@supports (-webkit-appearance: none) or (-moz-appearance: none) or (appearance: none) {
+  ._g4rlqtx {
+    appearance: none !important;
+    border-style: solid !important;
+    overflow: hidden !important;
+    border-radius: 50% !important;
+    vertical-align: top !important;
+    outline: none !important;
+    border-color: rgb(34, 34, 34) !important;
+    border-width: 7px !important;
+    background: white !important;
+  }
+}
+
+._gfomxi {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  flex: 1 1 auto !important;
+  width: 100% !important;
+}
+
+._gw4xx4 {
+  color: rgb(34, 34, 34) !important;
+  cursor: inherit !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+.dir.uyl8mnh[class][class] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+._13xlah4 {
+  cursor: pointer !important;
+}
+
+._jro6t0 {
+  display: flex !important;
+}
+
+._7ytxmo {
+  margin-right: 16px !important;
+}
+
+._83s1a2 {
+  cursor: pointer !important;
+  box-sizing: border-box !important;
+  height: 22px !important;
+  width: 22px !important;
+  margin: 0px !important;
+}
+
+@supports (-webkit-appearance: none) or (-moz-appearance: none) or (appearance: none) {
+  ._83s1a2 {
+    appearance: none !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: rgb(176, 176, 176) !important;
+    background: rgb(255, 255, 255) !important;
+    overflow: hidden !important;
+    border-radius: 50% !important;
+    vertical-align: top !important;
+    outline: none !important;
+  }
+}
+
+._gfomxi {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  flex: 1 1 auto !important;
+  width: 100% !important;
+}
+
+._gw4xx4 {
+  color: rgb(34, 34, 34) !important;
+  cursor: inherit !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
