fx no. 8 A - add modal

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66536,3 +66536,18 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 16px !important;
   line-height: 20px !important;
 }
+
+._6tsdpm {
+  padding-top: 32px !important;
+}
+
+._lmgcah {
+  margin: auto !important;
+}
+
+@media (min-width: 744px) {
+  ._lmgcah {
+    margin-left: auto !important;
+    margin-right: 0px !important;
+  }
+}
