--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66556,3 +66556,62 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-right: 0px !important;
   }
 }
+
+._olsjb9v {
+  background: rgb(255, 255, 255) !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 12%) 0px 2px 16px !important;
+  color: rgb(34, 34, 34) !important;
+  margin-top: 34px !important;
+  padding: 8px 0px !important;
+  position: absolute !important;
+  top: 20px !important;
+  right: 8px !important;
+  max-height: calc(100vh - 100px) !important;
+  overflow: hidden auto !important;
+  z-index: 2 !important;
+  max-width: 180px !important;
+  min-width: 140px !important;
+  display: block !important;
+}
+
+@media (min-width: 744px) {
+  ._olsjb9v {
+      right: 16px !important;
+  }
+}
+
+._14tt8lmp {
+  -webkit-box-align: center !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  display: flex !important;
+  font-family: inherit !important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
+  line-height: 18px !important;
+  margin: 0px !important;
+  outline: none !important;
+  overflow: visible !important;
+  padding: 12px 16px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  user-select: auto !important;
+  white-space: nowrap !important;
+  width: 100% !important;
+  align-items: center !important;
+}
+
+._q40c6s {
+  flex: 1 0 auto !important;
+  max-width: calc(148px) !important;
+  min-width: calc(108px) !important;
+  white-space: normal !important;
+}
+
+._14tt8lmp:hover:not(:active) {
+  background-color: rgb(247, 247, 247) !important;
+}
