--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66744,3 +66744,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.t1aanlzc[class][class] {
   margin-bottom: 16px;
 }
+
+._14lk9e14 {
+  margin-bottom: 1.5rem;
+}
