--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66748,3 +66748,28 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._14lk9e14 {
   margin-bottom: 1.5rem;
 }
+._o365qq {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: #fff !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 0.4s !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+}
+@media (min-width: 744px) {
+  ._o365qq {
+    width: 100% !important;
+    max-width: 780px !important;
+    border-radius: 12px !important;
+  }
+}
