landing page no. 4 A, B, C, & D - fx

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66780,3 +66780,152 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     border-radius: 12px !important;
   }
 }
+
+._m90lh8 {
+  font-size:18px !important;
+  line-height:190% !important;
+  font-weight:400 !important;
+  color:#222222 !important;
+  margin-top:0px !important;
+}
+
+._m90lh8:nth-child(odd) p:empty{
+  margin:0px !important;
+}
+
+._m90lh8:nth-child(even) p:empty{
+  margin:0px !important;
+}
+
+._m90lh8:nth-child(odd) a{
+  text-decoration:underline !important;
+}
+
+._m90lh8:nth-child(even) a{
+  text-decoration:underline !important;
+}
+
+._m90lh8:nth-child(odd) h1{
+  font-size:40px !important;
+  font-weight:600 !important;
+  line-height:101% !important;
+  letter-spacing:-2% !important;
+}
+
+._m90lh8:nth-child(even) h1{
+  font-size:40px !important;
+  font-weight:600 !important;
+  line-height:101% !important;
+  letter-spacing:-2% !important;
+}
+
+._m90lh8:nth-child(odd) h2{
+  font-size:26px !important;
+  line-height:30px !important;
+  font-weight:600 !important;
+}
+
+._m90lh8:nth-child(even) h2{
+  font-size:26px !important;
+  line-height:30px !important;
+  font-weight:600 !important;
+}
+
+._m90lh8:nth-child(odd) h3{
+  font-size:22px !important;
+  line-height:26px !important;
+  font-weight:600 !important;
+}
+
+._m90lh8:nth-child(even) h3{
+  font-size:22px !important;
+  line-height:26px !important;
+  font-weight:600 !important;
+}
+
+._m90lh8:nth-child(odd) h4{
+  font-size:32px !important;
+  font-weight:600 !important;
+  line-height:100% !important;
+}
+
+@media (min-width: 950px){
+  ._m90lh8:nth-child(odd) h4{
+    font-size:48px !important;
+    font-weight:600 !important;
+    line-height:100% !important;
+    letter-spacing:-0.03em !important;
+  }
+}
+
+._m90lh8:nth-child(even) h4{
+  font-size:32px !important;
+  font-weight:600 !important;
+  line-height:100% !important;
+}
+
+@media (min-width: 950px){
+  ._m90lh8:nth-child(even) h4{
+    font-size:48px !important;
+    font-weight:600 !important;
+    line-height:100% !important;
+    letter-spacing:-0.03em !important;
+  }
+}
+
+._m90lh8:nth-child(odd) h5{
+  font-size:18px !important;
+  line-height:190% !important;
+  font-weight:400 !important;
+  color:#222222 !important;
+}
+
+._m90lh8:nth-child(even) h5{
+  font-size:18px !important;
+  line-height:190% !important;
+  font-weight:400 !important;
+  color:#222222 !important;
+}
+
+._m90lh8:nth-child(odd) h6{
+  font-size:15px !important;
+  line-height:150% !important;
+  letter-spacing:.03em !important;
+  font-weight:800 !important;
+  text-transform:uppercase !important;
+  margin-bottom:-20px !important;
+}
+
+._m90lh8:nth-child(even) h6{
+  font-size:15px !important;
+  line-height:150% !important;
+  letter-spacing:.03em !important;
+  font-weight:800 !important;
+  text-transform:uppercase !important;
+  margin-bottom:-20px !important;
+}
+
+._m90lh8:nth-child(odd) p{
+  margin-top:0px !important;
+  margin-bottom:34px !important;
+  margin-left:0px !important;
+  margin-right:0px !important;
+}
+
+._m90lh8:nth-child(even) p{
+  margin-top:0px !important;
+  margin-bottom:34px !important;
+  margin-left:0px !important;
+  margin-right:0px !important;
+}
+
+._m90lh8::first-letter{
+  float:left !important;
+  margin-right:13px !important;
+  margin-top:4px !important;
+  line-height:100% !important;
+  font-weight:900 !important;
+  font-size:64px !important;
+  letter-spacing:-0.02em !important;
+  text-transform:uppercase !important;
+}
