--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62137,7 +62137,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 6px !important;
 }
 .dir-ltr.n8ds5k6[class][class] {
-  left: var(--fgg-f-l-a);
+  left: 8px;
 }
 .dir.nckwpl[class][class] {
   transform: translateY(-50%);
@@ -62192,8 +62192,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: inline-flex;
   justify-content: center;
   -webkit-transition: -webkit-transform 0.25s;
-  width: calc(24px + var(--fgg-f-l-a));
-  height: calc(24px + var(--fgg-f-l-a));
+  width: calc(24px + 8px);
+  height: calc(24px + 8px);
 }
 .dir.b1vr1agd[class][class] {
   cursor: pointer;
@@ -62226,7 +62226,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   visibility: hidden;
 }
 .dir-ltr.ni0gafq[class][class] {
-  margin-left: var(--fgg-f-l-a);
+  margin-left: 8px;
 }
 .dir.nhc5psg[class][class] {
   border: 0;
@@ -63354,7 +63354,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: rgb(176, 176, 176) !important;
 }
 .dir.s1bh1tge[class][class] {
-  padding-top: var(--fgg-f-l-a);
+  padding-top: 8px;
 }
 .s1bh1tge[class][class] {
   color: var(--fo-jk-r-s);
@@ -65240,7 +65240,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 
 .dir.sn9vk1f[class][class] {
   margin: 6px;
-  margin-bottom: var(--fgg-f-l-a);
+  margin-bottom: 8px;
   transition-duration: 0.5s;
 }
 
@@ -66928,4 +66928,572 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size:64px !important;
   letter-spacing:-0.02em !important;
   text-transform:uppercase !important;
+}
+
+._1437yx3 {
+    position: fixed !important;
+    right: 15px !important;
+    top: 115px !important;
+    z-index: 10 !important;
+}
+
+._1437yx3.tooltip-dots {
+  position: relative  !important;
+  right: 0 !important;
+  top: 0 !important;
+  z-index: 10 !important;
+}
+
+._fe45ary {
+  position: absolute !important;
+  right: 0px !important;
+}
+
+._1x3sktb {
+  background: rgb(255, 255, 255) !important;
+  border: 1px solid rgba(0, 0, 0, 0.2) !important;
+  border-radius: 4px !important;
+  box-shadow: rgb(0 0 0 / 15%) 0px 14px 36px 2px !important;
+  padding: 0px !important;
+  margin: 4px 0px 0px !important;
+  list-style: none !important;
+}
+
+._ejgbk3 {
+  cursor: pointer !important;
+  background-color: transparent !important;
+  color: rgb(118, 118, 118) !important;
+  border-width: 0px 0px 1px !important;
+  border-top-style: initial !important;
+  border-right-style: initial !important;
+  border-left-style: initial !important;
+  border-top-color: initial !important;
+  border-right-color: initial !important;
+  border-left-color: initial !important;
+  border-image: initial !important;
+  display: block !important;
+  padding: 12px 16px !important;
+  width: 100% !important;
+  text-align: left !important;
+  outline-color: rgb(34, 34, 34) !important;
+  border-bottom-style: solid !important;
+  border-bottom-color: rgb(242, 242, 242) !important;
+}
+
+.mgddb66[class][class] {
+  display: flex;
+  align-items: center;
+}
+
+.dir-ltr.m1u4q6l7[class][class] {
+  margin-left: 8px;
+}
+.m1u4q6l7[class][class] {
+  color: #222;
+}
+
+.m17wbc0e[class][class] {
+  display: flex;
+  align-items: center;
+}
+
+.dir-ltr.mz78wp7[class][class] {
+  margin-left: 8px;
+}
+.mz78wp7[class][class] {
+  color: #222;
+}
+
+@media (min-width: 744px) {
+  .dir-ltr.d16em58v[class][class] {
+    left: 220px;
+  }
+}
+
+._1sf1ortg {
+  background: rgb(255, 255, 255) !important;
+  border-radius: 16px !important;
+  position: absolute !important;
+  padding: 6px !important;
+  border: 1px solid rgb(235, 235, 235) !important;
+  top: 60px !important;
+  z-index: 501 !important;
+  display: block !important;
+  box-shadow: rgb(0 0 0 / 6%) 0px 16px 88px, rgb(0 0 0 / 10%) 0px 12px 24px !important;
+}
+
+._si4jfmp {
+  position: relative !important;
+  text-align: left !important;
+  background: rgb(255, 255, 255) !important;
+}
+
+._ajz5vs {
+  opacity: 0 !important;
+  position: absolute !important;
+}
+
+._txa8fll {
+  position: relative !important;
+  margin-left: 9px !important;
+}
+
+._14676s3 {
+  outline: none !important;
+}
+
+._vik423 {
+  color: rgb(117, 117, 117) !important;
+  position: absolute !important;
+  top: 62px !important;
+  z-index: 2 !important;
+  text-align: left !important;
+}
+
+._95z1rt {
+  list-style: none !important;
+  margin: 1px 0px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  font-size: 14px !important;
+}
+
+._5gtns3 {
+  display: inline-block !important;
+  text-align: center !important;
+}
+
+._17w2za {
+    position: relative !important;
+    z-index: 2 !important;
+    height: 0px !important;
+}
+
+._owpl6c4 {
+  cursor: pointer !important;
+  user-select: none !important;
+  border: 0px !important;
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
+._nztsc8l {
+  position: absolute !important;
+  top: 7.5px !important;
+  padding: 15px !important;
+  left: 23px !important;
+}
+
+._13tn83am {
+  position: absolute !important;
+  top: 7.5px !important;
+  padding: 15px !important;
+  right: 23px !important;
+}
+
+._754zdu7 {
+  background: rgb(255, 255, 255) !important;
+  text-align: left !important;
+  z-index: 0 !important;
+  position: absolute !important;
+  left: 9px !important;
+}
+
+._fdp53bg {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+  position: absolute !important;
+  z-index: -1 !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  visibility: hidden !important;
+}
+
+._1lds9wb {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+}
+
+._kuxo8ai {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+  visibility: hidden !important;
+}
+
+._1svux14 {
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  vertical-align: top !important;
+  user-select: none !important;
+}
+
+._gucugi {
+  color: rgb(72, 72, 72) !important;
+  font-size: 18px !important;
+  text-align: center !important;
+  padding-top: 22px !important;
+  padding-bottom: 37px !important;
+  caption-side: initial !important;
+}
+
+._p5jgym {
+  border-collapse: collapse !important;
+  border-spacing: 0px !important;
+}
+
+._12fun97 {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  font-size: 14px !important;
+  text-align: center !important;
+}
+
+.dthkce[class][class] {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.dthkce[class][class] {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.d2ecn92[class][class] {
+  color: #222222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.dir.d2ecn92[class][class] {
+  border: none;
+  border-radius: 100%;
+}
+
+.d9xy0vv[class][class] {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+.d2ecn92[class][class] {
+  color: #222222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.s1bhmbtb[class][class] {
+  color: #FFF;
+  position: relative;
+  z-index: 1;
+}
+
+.dir.d2ecn92[class][class] {
+  border: 2px solid transparent;
+  border-radius: 100%;
+}
+
+.dir.d2ecn92:hover[class][class] {
+  border: 2px solid #222
+}
+
+.dir.s1bhmbtb[class][class] {
+  background: #222222;
+  border: 1.5px solid #222222;
+}
+
+._1pzwj39 {
+  color: rgb(34, 34, 34) !important;
+}
+
+._1xkr92p {
+  overflow-y: auto !important;
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+  margin-left: -12px !important;
+  margin-right: -12px !important;
+}
+
+._1wadwfl {
+  height: 1px !important;
+  background-color: rgb(221, 221, 221) !important;
+}
+
+._qc3ank {
+  display: flex !important;
+  white-space: nowrap !important;
+  overflow: visible !important;
+}
+
+._fd0fliz {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  border: none !important;
+  background: transparent !important;
+  padding: 10px !important;
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;
+  margin-right: 6px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  position: relative !important;
+  outline: none !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: default !important;
+}
+
+._fd0fliz:first-child {
+  margin-left: -10px !important;
+}
+
+._fd0fliz::after {
+  content: "" !important;
+  position: absolute !important;
+  background-color: rgb(34, 34, 34) !important;
+  bottom: -6px !important;
+  left: 10px !important;
+  width: calc(100% - 20px) !important;
+  height: 2px !important;
+}
+
+._tns11i {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  border: none !important;
+  background: transparent !important;
+  color: rgb(113, 113, 113) !important;
+  padding: 10px !important;
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;
+  margin-right: 6px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  position: relative !important;
+  outline: none !important;
+}
+
+@media (min-width: 744px) {
+  ._uyuf1b {
+    height: 60vh !important;
+    overflow-y: auto !important;
+  }
+}
+
+._g0ajkh {
+  list-style-type: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._1rn3mv3:not(:last-child) {
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+}
+
+._b8adsk {
+  color: rgb(34, 34, 34) !important;
+  position: relative !important;
+}
+
+._1ct3lsx {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 24px 0px !important;
+}
+
+._1hmlc6dq {
+  text-decoration: none !important;
+  color: rgb(72, 72, 72) !important;
+  display: block !important;
+}
+
+._13dnq1 {
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+._zye90a {
+  color: rgb(34, 34, 34) !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+
+._d1ib85 {
+  position: relative !important;
+  display: inline-block !important;
+}
+
+._1szhrc0 {
+  cursor: pointer !important;
+  background-color: transparent !important;
+  border: 0px !important;
+  padding: 8px !important;
+  display: inline-block !important;
+  border-radius: 4px !important;
+}
+
+._1437yx3 {
+  position: fixed !important;
+  left: 0 /* @noflip */ !important;
+  top: 0px !important;
+  z-index: 10 !important;
+}
+
+._fe45ary {
+  position: absolute !important;
+  right: 0px !important;
+}
+
+._17z3v3kl {
+  background: #FFFFFF !important;
+  border: 1px solid rgba(0, 0, 0, 0.2) !important;
+  border-radius: 4px !important;
+  box-shadow: 0 14px 36px 2px rgb(0 0 0 / 15%) !important;
+  padding: 0px !important;
+  margin: 4px 0 0 0 !important;
+  list-style: none !important;
+  display: none !important;
+}
+
+._ejgbk3 {
+  cursor: pointer !important;
+  background-color: transparent !important;
+  color: #767676 !important;
+  border: 0px !important;
+  display: block !important;
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+  width: 100% !important;
+  text-align: left !important;
+  outline-color: #222222 !important;
+  border-bottom: 1px solid #F2F2F2 !important;
+}
+
+._12eeuwg {
+  color: rgb(217, 57, 0) !important;
+}
+
+._ba3mo2p {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  line-height: 1.375em !important;
+  color: inherit !important;
+}
+
+._185kh56 {
+  color: rgb(0, 132, 137) !important;
+}
+
+._g0ajkh {
+  list-style-type: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._1rn3mv3:not(:last-child) {
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+}
+
+._b8adsk {
+  color: rgb(34, 34, 34) !important;
+  position: relative !important;
+}
+
+._1ct3lsx {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 24px 0px !important;
+}
+
+._1hmlc6dq {
+  text-decoration: none !important;
+  color: rgb(72, 72, 72) !important;
+  display: block !important;
+}
+
+._13dnq1 {
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+._1gpk1v7 {
+    padding-top: 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._1gpk1v7 {
+    margin-right: 8px !important;
+    margin-bottom: 24px !important;
+  }
+}
+
+._17j792vp {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 1.375em !important;
+  color: inherit !important;
+}
+
+._mvip18q {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+}
+@media (min-width: 744px) {
+  ._mvip18q {
+    width: 100% !important;
+    max-width: 568px !important;
+    border-radius: 12px !important;
+  }
+}
+
+._dclc1y {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 18px !important;
+  line-height: 24px !important;
+  font-weight: 400 !important;
+  margin-left: 16px !important;
 }
